- Added 4 new components : Book - MainPage - SearchPage - NoMatch - Fixed so that Books in search results should have the shelf they're on selected in the dropdown for that book. - Covered the case that when a book doesn't have a thumbnail and is missing the imageLinks property - Covered the case that when a book doesn't have an author - Fixed README.md

--- a/src/App.css
+++ b/src/App.css
@@ -181,3 +181,9 @@ body, .app {
   text-align: center;
   font-size: 0.8em;
 }
+
+.error404 {
+  text-align: center;
+  font-size: 5em;
+  color: dimgrey;
+}
